fix gap